# galan

./: AUTHORS  Makefile.am  Makefile.libaudiofile  Makefile.w32  NEWS  NOTES  README  README.w32  TODO  TODO.w32  acconfig.h  aclocal.m4  autocvs  config.h.libaudiofile  config.h.w32  configure.ac  configure.in  dbggalan  dgrep  galan  galan.spec.in  galan.ui  valgalan
doc/examples/: 2oggplayers.galan  README  bigtest.galan  midisynth-try1.galan  sampler-usage.galan  t2.galan  t3.galan  t4.galan  tutorial.galan
doc/examples/samples/: cl_hat.raw  kick.raw  op_hat.raw  samp_1.raw  snare.raw
doc/html/: README
include/: buffer.h  cocomp.h  comp.h  control.h  galan_jack.h  galan_lash.h  gencomp.h  generator.h  global.h  gtkknob.h  gtkslider.h  gui.h  iscomp.h  ladspa.h  msgbox.h  objectstore.h  plugin.h  prefs.h  sample-display.h  shcomp.h  sheet.h
patches/: galan-esd.patch
pixmaps/: Makefile.am  appicon.xcf  knob.xpm  knob1.xcf  knob2.xcf  logo.xcf  osc.xpm  oss_output.xpm  oss_output1.xpm  oss_output2.xcf  scratch.xcf  shot020-controls.xcf  shot020-mesh.xcf  slider.xpm  slider1.xcf  super1shot-controls.xcf  super1shot-network.xcf
plugins/: Makefile.am  Makefile.w32  adsr.c  alsa_midi.c  alsa_out.c  alsa_out_callback.c  arradd.c  arrmul.c  arrwindow.c  atan.c  balance.c  canvascontrol.c  clock.c  convolute.c  ctrl.c  dcbias.c  diff.c  dllinit.c  emu10k1-iocomp.c  emu10k1-patchcomp.c  emu10k1.c  evtadd.c  evtcomp.c  evtgate.c  evtmul.c  evtnotetofreq.c  evtpower.c  evtsgn.c  evttimer.c  fbdelay.c  fft.c  filerequester.c  fst.c  ifft.c  iir_generic.c  integrate.c  jack.c  joyport.c  ladspa-load.c  ladspa.c  (+130 more)
plugins/emu10k1-include/: dsp.h  internal.h  mix.h
plugins/emu10k1-lib/: Makefile  debug.c  driver_access.c  dsp.c  file.c  mix.c
plugins/gl/: Makefile.am  cube.c  gldisplay.c  glrotate.c  glscale.c  gltranslate.c  gluniscale.c  light.c  lw.c  lwo.c  plane.c  prio.c  triangle.c
python/: Makefile  galan.pyx  galantest.py  galantest2.py
sheets/: Makefile.am  bassdrum01.gsheet  beep01.gsheet  clock01.gsheet  emu-RecordFromLineIn.gsheet  flanger.gsheet  hihat01.gsheet
sheets/complex/: Makefile.am  mult.gsheet  sinus.gsheet
sheets/controllers/: Makefile.am  dancestation01.gsheet  twonder-lfo.gsheet
sheets/drums/: Makefile.am
sheets/experiments/: Makefile.am  jack-delay.gsheet  jack-delay02.gsheet  vocoderinput01.gsheet  vocoderinput02.gsheet  vocoderinput03.gsheet  vocoderinput04.gsheet  vocoderinput05.gsheet  vocodermod01.gsheet  vocodermod02.gsheet
sheets/fx/: 303filter01.gsheet  Makefile.am  bpm-delay.gsheet  mbeq01.galan  mbeq01.gsheet  mbeq02.gsheet  vocodertest01.gsheet
sheets/gl/: Makefile.am  peak-cube-xy.gsheet  peak-cube.gsheet  plane.gsheet
sheets/misc/: Makefile.am  adsr.gsheet  adsr02.gsheet  adsr03_super.gsheet  bpm-time.gsheet  jack-master-seq.gsheet  lfo.gsheet  midi-triggerseq01.gsheet  midi_in01.gsheet  midi_in02.gsheet  mst-seq.gsheet  mst-seq2.gsheet  param-map.gsheet  sampler01.gsheet  sampler02.gsheet  seq01.gsheet  settings01.gsheet  spectrumanalyzer01.gsheet  trigger_array01.gsheet
sheets/seq-voices/: Makefile.am  seq-beep01.gsheet
sheets/voices/: Makefile.am  beep02.gsheet  drumbank01.gsheet  drumbank02.gsheet  oggplayer01.gsheet  poly-beep-onevoice.gsheet  poly-beep01.gsheet  sirene01.gsheet  sirene02.gsheet  slideosc01.gsheet  slideosc02.gsheet  syncosc01.gsheet
src/: Makefile.am  Makefile.w32  buffer.c  clock.c  cocomp.c  comp-action-class.c  comp-action-class.h  comp.c  control.c  event.c  galan-compaction.c  galan-compaction.gob  galan-compaction.h  galan-comptree-model.c  galan-comptree-model.gob  galan-comptree-model.h  galan.c  gencomp.c  generator.c  gtkknob.c  gtkslider.c  gui.c  iscomp.c  jack.c  lash.c  main.c  msgbox.c  objectstore.c  plugin.c  prefs.c  sample-display.c  shcomp.c  sheet.c  tech-knob.gob
